test/negative/803_macro_bad_category.err
803_macro_bad_category.fx:3:9: error: unknown macro parameter category '@blah'; expected @expr or @for_expr
 3 | macro m(x: @blah): int = x
   |         ^
